Fix ref links covered by navbar.
Closes #1232.

--- a/css/src/base.less
+++ b/css/src/base.less
@@ -440,6 +440,11 @@ footer {
   }
 }
 
+.footnote-ref, .math.display {
+  margin-top: (-(@navbar-height + 10px));
+  padding-top: (@navbar-height + 10px);
+}
+
 .footnotes {
   li {
     margin-top: (-(@navbar-height + 10px));
